--- a/style.css
+++ b/style.css
@@ -5,14 +5,14 @@
 body {
     font-family: Arial;
     padding: 10px;
-    background: #303030;
+    background: #f1f1f1;
 }
 
 /* Header/Blog Title */
 .header {
     padding: 30px;
     text-align: center;
-    background: #363636;
+    background: white;
 }
 
 .header h1 {
@@ -22,7 +22,7 @@ body {
 /* Style the top navigation bar */
 .topnav {
     overflow: hidden;
-    background-color: #2c2c2c;
+    background-color: #333;
 }
 
 /* Style the topnav links */
