--- a/style.css
+++ b/style.css
@@ -5,14 +5,14 @@
 body {
     font-family: Arial;
     padding: 10px;
-    background: #f1f1f1;
+    background: #303030;
 }
 
 /* Header/Blog Title */
 .header {
     padding: 30px;
     text-align: center;
-    background: white;
+    background: #363636;
 }
 
 .header h1 {
@@ -22,7 +22,7 @@ body {
 /* Style the top navigation bar */
 .topnav {
     overflow: hidden;
-    background-color: #333;
+    background-color: #000000;
 }
 
 /* Style the topnav links */
@@ -37,8 +37,8 @@ body {
 
 /* Change color on hover */
 .topnav a:hover {
-    background-color: #ddd;
-    color: black;
+    background-color: #303030;
+    color: #747474;
 }
 /* Create two unequal columns that floats next to each other */
 
@@ -52,20 +52,20 @@ body {
 .rightcolumn {
     float: left;
     width: 25%;
-    background-color: #f1f1f1;
+    background-color: #363636;
     padding-left: 20px;
 }
 
 /* Fake image */
 .fakeimg {
-    background-color: #aaa;
+    background-color: #747474;
     width: 100%;
     padding: 20px;
 }
 
 /* Add a card effect for articles */
 .card {
-    background-color: white;
+    background-color: #363636;
     padding: 20px;
     margin-top: 20px;
 }
@@ -81,7 +81,7 @@ body {
 .footer {
     padding: 20px;
     text-align: center;
-    background: #ddd;
+    background: #363636;
     margin-top: 20px;
 }
 
