--- a/style.css
+++ b/style.css
@@ -56,9 +56,9 @@
     padding-left: 20px;
   }
   
-  /* Fake image */
-  .fakeimg {
-    background-color: #aaa;
+  /* Image */
+  img {
+    height: 200 px;
     width: 100%;
     padding: 20px;
   }
